# butteraugli

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  mise.toml  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs
lib/: butteraugli.ex
lib/butteraugli/: cancel_ref.ex  cancellation.ex  cancellation_token.ex  error.ex  native.ex  reference.ex  result.ex  validate.ex  vix.ex
native/butteraugli_nif/: Cargo.toml
native/butteraugli_nif/.cargo/: config.toml
native/butteraugli_nif/src/: lib.rs
test/: butteraugli_test.exs
test/butteraugli/: cancel_ref_test.exs  cancellation_test.exs  cancellation_token_test.exs  formats_test.exs  reference_test.exs  strip_parity_test.exs  vix_test.exs
test/support/: fixtures.ex
